<?xml version="1.0"?>
<package format="2">
  <name>hector_demo</name>
  <version>0.0.0</version>
  <description>The hector_demo package</description>

  <maintainer email="chenkel@todo.todo">chenkel</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_geotiff_launch</exec_depend>

  <export>
  </export>
</package>
